tests/saved_state_reinit_libdef_change_mergebase/saved_state_reinit_libdef_change_mergebase.exp
Scenario 1: upstream libdef change
Before recheck:
No errors!

The Flow server is currently in lazy mode and is only checking 2/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
After recheck:
Error ------------------------------------------------------------------------------------------------------ test.js:2:2

Cannot cast `myGlobal` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:2:2
   2| (myGlobal: string);
       ^^^^^^^^

References:
   libs/lib.js:2:23
   2| declare var myGlobal: number;
                            ^^^^^^ [1]
   test.js:2:12
   2| (myGlobal: string);
                 ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 3/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
Used saved-state reinit:
no
Did NOT fall back to reinit_full_check:
yes

Scenario 2: local libdef change
Before recheck:
No errors!

The Flow server is currently in lazy mode and is only checking 2/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
After recheck:
Error ------------------------------------------------------------------------------------------------------ test.js:2:2

Cannot cast `myGlobal` to string because boolean [1] is incompatible with string [2]. [incompatible-type]

   test.js:2:2
   2| (myGlobal: string);
       ^^^^^^^^

References:
   libs/lib.js:2:23
   2| declare var myGlobal: boolean;
                            ^^^^^^^ [1]
   test.js:2:12
   2| (myGlobal: string);
                 ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 3/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
Tried saved-state reinit:
no
Fell back to reinit_full_check:
no

